# norse-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  entrypoint.sh
scripts/: norse-server  norse-server-win.bat
src/: __init__.py  exceptions.py  helpers.py  logger.py  main.py  serialize.py  server.py  utils.py
src/norse_server/: __init__.py  exceptions.py  helpers.py  logger.py  main.py  serialize.py  utils.py
