[project]
name = "norse-server"
authors = [
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
  {name = "Jens E. Pedersen", email = "jeped@kth.se"},
]
description = "Server for executing arbitrary PyTorch and Norse code"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Python", "PyTorch", "Norse", "Flask"]
license = {text = "BSD-3-Clause"}
classifiers = [
  "Framework :: Flask",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]

[tool.setuptools]
package-dir = {"norse_server" = "src"}
script-files = ["scripts/norse-server", "scripts/norse-server-win.bat"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "src.__version__"}