[project]
name = "norse-server"
version = "1.0.1"
description = "Server for executing arbitrary PyTorch and Norse code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
  {name = "Jens E. Pedersen", email = "jeped@kth.se"},
]
maintainers = [
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
]
keywords = ["Python", "PyTorch", "Norse", "Flask"]
classifiers = [
  "Framework :: Flask",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "RestrictedPython",
  "flask",
  "flask-cors",
  "gunicorn",
  "norse",
  "requests",
  "werkzeug,
]

[project.urls]
repository = "https://github.com/norse/norse-server"
documentation = "https://norse.github.io/norse/"

[tool.setuptools]
script-files = ["scripts/norse-server", "scripts/norse-server-win.bat"]

[tool.black]
line-length = 120

[tool.flake8]
# This is ignored
# see discussions around https://github.com/PyCQA/flake8/issues/234

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --pylint --pydocstyle --cov --ignore=conda --ignore=venv --ignore=.git --ignore=__pycache__"
norecursedirs = ".git _build venv tmp*"

[tool.mypy]
exclude = ".git/, .pytest_cache/, conda/, venv/"

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D300"
