[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "norse-server"
version = "1.1.0"
description = "Server instance for executing arbitrary PyTorch and Norse code"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["BSD-3-Clause"]
authors = [
  {name = "Hilal Khalife"},
  {name = "Jens E. Pedersen"},
  {name = "Sebastian Spreizer"},
]
maintainers = [
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
  {name = "Jens E. Pedersen", email = "jeped@kth.se"},
]
keywords = ["Norse", "PyTorch", "spiking neuronal networks"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "RestrictedPython",
  "fastAPI",
  "gunicorn",
  "norse",
  "pydantic",
  "uvicorn",
]

[project.urls]
repository = "https://github.com/norse/norse-server"
documentation = "https://norse.github.io/norse/"

[tool.setuptools]
script-files = [
  "scripts/norse-server",
  "scripts/norse-server-win.bat"
]

[tool.black]
line-length = 120

[tool.flake8]
# This is ignored
# see discussions around https://github.com/PyCQA/flake8/issues/234

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --pylint --pydocstyle --cov --ignore=conda --ignore=venv --ignore=.git --ignore=__pycache__"
norecursedirs = ".git _build venv tmp*"

[tool.mypy]
exclude = ".git/, .pytest_cache/, conda/, venv/"

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D300"
